@@ -2,8 +2,8 @@ package com.team573.gongguri.domain.chat.service;
 
 
 import static com.team573.gongguri.domain.chat.mapper.ChatMapper.toChatRoomParticipation;
-import static com.team573.gongguri.global.exception.ErrorCode.NOT_FOUND_CHATROOM;
-import static com.team573.gongguri.global.exception.ErrorCode.NOT_FOUND_MEMBER;
+import static com.team573.gongguri.global.exception.CustomErrorCode.NOT_FOUND_CHATROOM;
+import static com.team573.gongguri.global.exception.CustomErrorCode.NOT_FOUND_MEMBER;
 
 import com.team573.gongguri.domain.chat.dto.ChatMessageRequestDto;
 import com.team573.gongguri.domain.chat.dto.ChatMessageResponseDto;
@@ -17,10 +17,9 @@ import com.team573.gongguri.domain.chat.repository.ChatRoomRepository;
 import com.team573.gongguri.domain.chat.repository.CustomChatMessageRepository;
 import com.team573.gongguri.domain.member.entity.Member;
 import com.team573.gongguri.domain.member.repository.MemberRepository;
-import com.team573.gongguri.global.exception.ErrorException;
+import com.team573.gongguri.global.exception.CustomException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.bson.types.ObjectId;
 import org.springframework.data.domain.PageRequest;
@@ -41,9 +40,11 @@ public class ChatService {
         Long roomId,
         ChatMessageRequestDto requestDto
     ) {
-        ChatMessage createdMessage = chatMessageRepository.save(
-            ChatMapper.toChatMessage(roomId, requestDto.nickname(), requestDto.content())
-        );
+        ChatMessage createdMessage
+            = ChatMapper.toChatMessage(roomId, requestDto.nickname(), requestDto.content());
+
+        chatMessageRepository.save(createdMessage);
+
         return ChatMapper.toChatMessageResponseDto(createdMessage);
     }
 
@@ -57,10 +58,10 @@ public class ChatService {
     // 채팅방 참여자 추가
     public void addChatParticipation(Long roomId, String email) {
         Member member = memberRepository.findByEmail(email)
-            .orElseThrow(() -> new ErrorException(NOT_FOUND_MEMBER));
+            .orElseThrow(() -> new CustomException(NOT_FOUND_MEMBER));
 
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
-            .orElseThrow(() -> new ErrorException(NOT_FOUND_CHATROOM));
+            .orElseThrow(() -> new CustomException(NOT_FOUND_CHATROOM));
 
         ChatRoomParticipation createdParticipation = toChatRoomParticipation(member, chatRoom);
 
@@ -68,12 +69,12 @@ public class ChatService {
     }
 
     // 채팅방 참여자 제거
-    public void deleteChatParticipation(Long roomId, String email) {
-        Member member = memberRepository.findByEmail(email)
-            .orElseThrow(() -> new ErrorException(NOT_FOUND_MEMBER));
+    public void deleteChatParticipation(Long roomId, Long memberId) {
+        Member member = memberRepository.findById(memberId)
+            .orElseThrow(() -> new CustomException(NOT_FOUND_MEMBER));
 
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
-            .orElseThrow(() -> new ErrorException(NOT_FOUND_CHATROOM));
+            .orElseThrow(() -> new CustomException(NOT_FOUND_CHATROOM));
 
         chatRoomParticipationRepository.deleteByChatRoomAndMember(chatRoom, member);
     }
@@ -100,7 +101,7 @@ public class ChatService {
 
         return messages.stream()
             .map(ChatMapper::toChatMessageResponseDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Map<Long, String> getFirstMessageMap(List<Long> chatRoomIds) {
